# Estructura-de-Datos

./: .gitignore  CMakeLists.txt  cola.c  cola.h  lista.c  listaenlazada.c  listaenlazada.h  principal.c
Canales/Canales/: CMakeLists.txt
Canales/Canales/src/: principal.c
Canales/Canales/src/canalesl/: canales.c  canales.h
Canales/__MACOSX/: ._Canales
Canales/__MACOSX/Canales/src/canalesl/: ._canales.c
pila/: pila.c  pila.h
